generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  directUrl  = env("DIRECT_URL")
  extensions = [unaccent, pg_trgm]
}

// ============================================
// Enums
// ============================================

enum UserRole {
  USER
  ADMIN
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PACKING
  SHIPPING
  COMPLETED
  CANCELED
}

enum PaymentMethod {
  COD
  BANK_TRANSFER
  PAYOS
}

enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}

enum ProductStatus {
  DRAFT
  ACTIVE
  ARCHIVED
}

enum Gender {
  BOY
  GIRL
  UNISEX
}

enum AgeRange {
  NEWBORN_0_1
  TODDLER_1_3
  KID_3_6
  KID_6_12
}

enum InventoryReason {
  MANUAL_ADD
  MANUAL_REMOVE
  ORDER_RESERVE
  ORDER_CANCEL
  STOCK_TAKE
}

enum ReviewStatus {
  PENDING
  APPROVED
  REJECTED
}

enum DiscountType {
  PERCENT
  FIXED
}

enum ReturnStatus {
  REQUESTED
  APPROVED
  REJECTED
  REFUNDED
}

// ============================================
// Auth & User
// ============================================

model User {
  id        String   @id @db.Uuid
  email     String   @unique
  name      String?
  phone     String?
  role      UserRole @default(USER)
  avatarUrl String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  addresses          Address[]
  orders             Order[]
  inventoryLogs      InventoryLog[]
  reviews            Review[]
  wishlistItems      WishlistItem[]
  voucherRedemptions VoucherRedemption[]
  returnRequests     ReturnRequest[]
}

model Address {
  id            String   @id @default(cuid())
  userId        String   @db.Uuid
  recipientName String
  phone         String
  province      String
  provinceCode  String
  district      String
  districtCode  String
  ward          String
  wardCode      String
  addressLine   String
  isDefault     Boolean  @default(false)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

// ============================================
// Catalog
// ============================================

model Category {
  id        String   @id @default(cuid())
  name      String
  slug      String   @unique
  parentId  String?
  imageUrl  String?
  sortOrder Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  parent   Category?  @relation("CategoryChildren", fields: [parentId], references: [id], onDelete: SetNull)
  children Category[] @relation("CategoryChildren")
  products Product[]

  @@index([parentId])
  @@index([slug])
}

model Product {
  id           String        @id @default(cuid())
  slug         String        @unique
  name         String
  description  String        @db.Text
  categoryId   String
  ageRange     AgeRange[]
  gender       Gender        @default(UNISEX)
  basePrice    Int
  comparePrice Int?
  status       ProductStatus @default(DRAFT)
  material     String?
  origin       String?
  careGuide    String?
  ratingAvg    Float         @default(0)
  ratingCount  Int           @default(0)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  category       Category         @relation(fields: [categoryId], references: [id])
  images         ProductImage[]
  variants       ProductVariant[]
  reviews        Review[]
  wishlistItems  WishlistItem[]
  flashSaleItems FlashSaleItem[]

  @@index([categoryId, status])
  @@index([status, createdAt])
  @@index([slug])
}

model ProductImage {
  id        String  @id @default(cuid())
  productId String
  url       String
  alt       String
  sortOrder Int     @default(0)
  isPrimary Boolean @default(false)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
}

model ProductVariant {
  id        String   @id @default(cuid())
  productId String
  sku       String   @unique
  size      String
  sizeNote  String?
  color     String
  colorHex  String?
  price     Int?
  stock     Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  product       Product        @relation(fields: [productId], references: [id], onDelete: Cascade)
  orderItems    OrderItem[]
  inventoryLogs InventoryLog[]

  @@index([productId])
  @@index([sku])
}

// ============================================
// Orders
// ============================================

model Order {
  id              String        @id @default(cuid())
  orderCode       String        @unique
  userId          String        @db.Uuid
  status          OrderStatus   @default(PENDING)
  paymentMethod   PaymentMethod
  paymentStatus   PaymentStatus @default(UNPAID)
  subtotal        Int
  shippingFee     Int
  discountTotal   Int           @default(0)
  voucherCode     String?
  total           Int
  note            String?       @db.Text
  internalNote    String?       @db.Text
  trackingCode    String?
  shippingAddress Json

  // PayOS online payment (null for COD / legacy bank transfer orders)
  payosOrderCode     BigInt?   @unique
  paymentLinkId      String?
  paymentCheckoutUrl String?
  paymentRef         String?
  paymentExpiresAt   DateTime?

  paidAt      DateTime?
  canceledAt  DateTime?
  completedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  user              User               @relation(fields: [userId], references: [id])
  items             OrderItem[]
  voucherRedemption VoucherRedemption?
  returnRequest     ReturnRequest?

  @@index([userId, createdAt(sort: Desc)])
  @@index([status, createdAt(sort: Desc)])
  @@index([orderCode])
  @@index([status, paymentStatus, paymentExpiresAt])
}

model OrderItem {
  id           String  @id @default(cuid())
  orderId      String
  variantId    String
  productName  String
  productSlug  String
  productImage String?
  variantSize  String
  variantColor String
  unitPrice    Int
  quantity     Int
  subtotal     Int

  order   Order          @relation(fields: [orderId], references: [id], onDelete: Cascade)
  variant ProductVariant @relation(fields: [variantId], references: [id])

  @@index([orderId])
  @@index([variantId])
}

// ============================================
// Inventory audit log
// ============================================

model InventoryLog {
  id          String          @id @default(cuid())
  variantId   String
  delta       Int
  reason      InventoryReason
  note        String?
  adminUserId String?         @db.Uuid
  orderCode   String?
  createdAt   DateTime        @default(now())

  variant   ProductVariant @relation(fields: [variantId], references: [id], onDelete: Cascade)
  adminUser User?          @relation(fields: [adminUserId], references: [id])

  @@index([variantId, createdAt(sort: Desc)])
  @@index([createdAt(sort: Desc)])
}

// ============================================
// Reviews & ratings
// ============================================

model Review {
  id         String       @id @default(cuid())
  productId  String
  userId     String       @db.Uuid
  rating     Int
  title      String?
  comment    String       @db.Text
  images     String[]     @default([])
  status     ReviewStatus @default(PENDING)
  isVerified Boolean      @default(false)
  adminReply String?      @db.Text
  repliedAt  DateTime?
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, productId])
  @@index([productId, status])
  @@index([status, createdAt(sort: Desc)])
}

// ============================================
// Wishlist
// ============================================

model WishlistItem {
  id        String   @id @default(cuid())
  userId    String   @db.Uuid
  productId String
  createdAt DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([userId, productId])
  @@index([userId, createdAt(sort: Desc)])
}

// ============================================
// Vouchers / discount codes
// ============================================

model Voucher {
  id            String       @id @default(cuid())
  code          String       @unique
  description   String?
  discountType  DiscountType
  discountValue Int
  minOrderValue Int          @default(0)
  maxDiscount   Int?
  usageLimit    Int?
  usageCount    Int          @default(0)
  perUserLimit  Int?
  startsAt      DateTime
  endsAt        DateTime
  isActive      Boolean      @default(true)
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  redemptions VoucherRedemption[]

  @@index([code])
  @@index([isActive, startsAt, endsAt])
}

model VoucherRedemption {
  id        String   @id @default(cuid())
  voucherId String
  userId    String   @db.Uuid
  orderId   String   @unique
  discount  Int
  createdAt DateTime @default(now())

  voucher Voucher @relation(fields: [voucherId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([voucherId])
  @@index([userId])
}

// ============================================
// Flash sale
// ============================================

model FlashSale {
  id        String   @id @default(cuid())
  name      String
  startsAt  DateTime
  endsAt    DateTime
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  items FlashSaleItem[]

  @@index([isActive, startsAt, endsAt])
}

model FlashSaleItem {
  id          String @id @default(cuid())
  flashSaleId String
  productId   String
  salePrice   Int

  flashSale FlashSale @relation(fields: [flashSaleId], references: [id], onDelete: Cascade)
  product   Product   @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([flashSaleId, productId])
  @@index([productId])
}

// ============================================
// Returns / refunds
// ============================================

model ReturnRequest {
  id         String       @id @default(cuid())
  orderId    String       @unique
  userId     String       @db.Uuid
  reason     String       @db.Text
  status     ReturnStatus @default(REQUESTED)
  adminNote  String?      @db.Text
  resolvedAt DateTime?
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([status, createdAt(sort: Desc)])
}

// ============================================
// Homepage banners (CMS)
// ============================================

model Banner {
  id        String   @id @default(cuid())
  title     String
  imageUrl  String
  linkUrl   String?
  sortOrder Int      @default(0)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([isActive, sortOrder])
}
